tests/snapshots/codegen_snapshot_tests__newtype_implicit_coercion.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, Copy)]
struct Attempts(pub i64);
impl incan_stdlib::reflection::HasTypeClassName for Attempts {
    fn __class_name__() -> &'static str {
        "Attempts"
    }
}
impl Attempts {
    pub fn from_underlying(
        n: i64,
    ) -> Result<Attempts, incan_stdlib::validation::ValidationError> {
        if n <= 0 {
            return Err::<
                Attempts,
                incan_stdlib::validation::ValidationError,
            >(
                incan_stdlib::validation::ValidationError::new(
                    "attempts must be >= 1".to_string(),
                ),
            );
        }
        return Ok::<Attempts, incan_stdlib::validation::ValidationError>(Attempts(n));
    }
}
#[derive(Debug)]
struct RetryAttempts(pub Attempts);
impl incan_stdlib::reflection::HasTypeClassName for RetryAttempts {
    fn __class_name__() -> &'static str {
        "RetryAttempts"
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Job {
    attempts: Attempts,
}
impl incan_stdlib::reflection::HasClassName for Job {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Job {
    fn __class_name__() -> &'static str {
        "Job"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Job {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Job {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("attempts"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("attempts"),
                type_name: incan_stdlib::frozen::FrozenStr::new("Attempts"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn take_attempts(a: Attempts) {
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["", ""]; let __args : Vec < String > =
        vec![format!("{}", a.0)]; incan_stdlib::strings::fstring(& __parts, & __args) }
    );
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = take_attempts(
        match Attempts::from_underlying(3) {
            Ok(__incan_newtype_value) => __incan_newtype_value,
            Err(__incan_validation_error) => {
                incan_stdlib::validation::raise_validation_error(
                    "Attempts".to_string(),
                    "from_underlying".to_string(),
                    __incan_validation_error,
                )
            }
        },
    );
    let attempts: Attempts = match Attempts::from_underlying(4) {
        Ok(__incan_newtype_value) => __incan_newtype_value,
        Err(__incan_validation_error) => {
            incan_stdlib::validation::raise_validation_error(
                "Attempts".to_string(),
                "from_underlying".to_string(),
                __incan_validation_error,
            )
        }
    };
    let retry: RetryAttempts = RetryAttempts(
        match Attempts::from_underlying(5) {
            Ok(__incan_newtype_value) => __incan_newtype_value,
            Err(__incan_validation_error) => {
                incan_stdlib::validation::raise_validation_error(
                    "Attempts".to_string(),
                    "from_underlying".to_string(),
                    __incan_validation_error,
                )
            }
        },
    );
    let job = {
        let mut __incan_validation_errors = incan_stdlib::validation::ValidationErrorsBuilder::new(
            "Job".to_string(),
        );
        let __incan_field_0_raw = 6;
        let __incan_field_0_0_result = Attempts::from_underlying(__incan_field_0_raw);
        let __incan_field_0_validated_result = match __incan_field_0_0_result {
            Ok(__incan_attempts_validation_value) => {
                Ok::<
                    Attempts,
                    incan_stdlib::validation::ValidationError,
                >(__incan_attempts_validation_value)
            }
            Err(__incan_attempts_validation_error) => {
                let _ = __incan_validation_errors
                    .push_field_error(
                        "attempts",
                        __incan_attempts_validation_error.clone(),
                    );
                Err::<
                    Attempts,
                    incan_stdlib::validation::ValidationError,
                >(__incan_attempts_validation_error)
            }
        };
        let _ = __incan_validation_errors.raise_if_any();
        Job {
            attempts: match __incan_field_0_validated_result {
                Ok(__incan_newtype_value) => __incan_newtype_value,
                Err(__incan_validation_error) => {
                    incan_stdlib::validation::raise_validation_error(
                        "Attempts".to_string(),
                        "from_underlying".to_string(),
                        __incan_validation_error,
                    )
                }
            },
        }
    };
    let retry_attempts = retry.0;
    let _ = println!(
        "{}", { let __parts : [& str; 4usize] = ["", " ", " ", ""]; let __args : Vec <
        String > = vec![format!("{}", attempts.0), format!("{}", retry_attempts.0),
        format!("{}", job.attempts.0)]; incan_stdlib::strings::fstring(& __parts, &
        __args) }
    );
}
